--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,3 +4,19 @@ body{
     padding: 0;
     border: 0;
 }
+
+#superInfo{
+    margin: 0 !important;
+    padding: 0 !important;
+    border: 0 !important;
+}
+
+#infoHero{
+    width: 400px !important;
+    max-height: 700px !important;
+}
+
+p{
+    font-size: 1rem;
+    line-height: normal;
+}
